Character based players and army
Updated look and feel. Prep for WebGL

--- a/Indian-Yeti/index.html
+++ b/Indian-Yeti/index.html
@@ -17,6 +17,26 @@
   <script language="javascript" type="text/javascript" src="Population.js"></script>
   <script language="javascript" type="text/javascript" src="Species.js"></script>
   <script language="javascript" type="text/javascript" src="Genome.js"></script>
+  <style>
+  @font-face{
+    font-family: 'devlys_020_italic';
+    src: url('fonts/ufonts.com_devlys-020-italic-webfont.woff2') format('woff2'),
+         url('fonts/ufonts.com_devlys-020-italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'indianyetiregular';
+    src: url('fonts/indianyeti-regular-webfont.woff2') format('woff2'),
+         url('fonts/indianyeti-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+  }
+
+
+  </style>
 </head>
 
 <body>
