--- a/Indian-Yeti/index.html
+++ b/Indian-Yeti/index.html
@@ -37,6 +37,8 @@
 
 
   </style>
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
